# distributed-grep

./: .gitignore  CMakeLists.txt  README.md  grep.cpp  grep.h  grep_client.cpp  grep_server.cpp  grep_test.cpp
logs/: log1  log2
